--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,8 +1,10 @@
 <%- include('./partials/header.ejs') %>
 
 <div class="hero-container">
-  <h1 class="main-title">Enhance Your Life</h1>
-  <h3 class="subtitle">Optimize Your Time</h3>
+  <div class="hero-text">
+    <h1 class="main-title">Enhance Your Life</h1>
+    <h3 class="subtitle">Optimize Your Time</h3>
+  </div>
 
   <div class="card-row">
     <div class="card-item">
@@ -40,3 +42,4 @@
 </div>
 
 <%- include('./partials/footer.ejs') %>
+
