--- a/views/auth/sign-in.ejs
+++ b/views/auth/sign-in.ejs
@@ -1,15 +1,21 @@
 <%- include('../partials/header.ejs') %>
 
-<h1>Sign In</h1>
+<div class="auth-container">
+  <h1 class="auth-title">Sign In</h1>
 
-<form action="/auth/sign-in" method="POST">
-  <label for="email">Email:</label>
-  <input type="email" name="email" id="email" />
-  <label for="password">Password:</label>
-  <input type="password" name="password" id="password" />
-  <button type="submit">SIGN IN</button>
-</form>
+  <form class="auth-form" action="/auth/sign-in" method="POST">
+    <label for="email">Email:</label>
+    <input type="email" name="email" id="email" required />
 
-<p class="error-msg"><%= error %></p>
+    <label for="password">Password:</label>
+    <input type="password" name="password" id="password" required />
+
+    <button type="submit" class="btn primary">Sign In</button>
+  </form>
+
+  <% if (error) { %>
+    <p class="error-msg"><%= error %></p>
+  <% } %>
+</div>
 
 <%- include('../partials/footer.ejs') %>
